Fix Grid layout issue & other smaller stuff

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -150,12 +150,11 @@ body{
 }
 
 .event-info-close {
-  position: absolute;
-  top: 10px;
-  right: 20px;
   background: none;
-  border: none;
-  font-size: 24px;
+  font-size: 20px;
+  position: absolute;
+  left: 5px;
+  top: 0px;
   font-weight: bold;
   cursor: pointer;
 }
